# job_parcer

./: README.md  pyproject.toml
src/: abstract.py  data_error.py  head_hunter.py  main.py  save_to_json.py  super_job.py  utils.py  vacancy.py
src/data/: save_to_json.py
